Actualización del panel HTML

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
   <h1>📹 Datos en la Nube - API Cámaras</h1>
-  <iframe src="https://api-camaras-web.onrender.com/"></iframe>
+  <iframe src="https://api-camaras-web.onrender.com"></iframe>
 </body>
 </html>
